welcome.lessons.welcome.array.island.Island.scala.error
island:5: error: type mismatch;
 found   : Unit
 required: Int
	for(i <- 1 to taille - 1){
              ^