welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
	var niveau: Int = 0;
	var taille: Int = num.length

	for(i <- 1 to taille - 1){
		if(num(i) < num (i - 1)){
			niveau = niveau + 1;
		}
	}
}
